@@ -906,6 +906,7 @@ public:
 	bool DecreaseByID(uint32 type, uint8 amt);
 	uint8 SlotConvert2(uint8 slot); //Maybe not needed.
 	void Escape(); //AA Escape
+	void DisenchantSummonedBags(bool client_update = true);
 	void RemoveNoRent(bool client_update = true);
 	void RemoveDuplicateLore(bool client_update = true);
 	void MoveSlotNotAllowed(bool client_update = true);
